# fossil-journey-tracker

./: .gitignore  download_gplates_cache.py  download_gplates_full.py  geological_timescale.py  pyproject.toml  requirements.txt  simulator.py  test_sync.py
docs/: PLANO_IMPLEMENTACAO.md
