[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fossil-journey-tracker"
version = "2.1.0"
description = "Paleocontinental Journey Visualization for Microfossils - GTMDisplay Module"
readme = "README.md"
license = {text = "PROPRIETARY"}
requires-python = ">=3.11"
authors = [
    {name = "ITT Oceaneon / UNISINOS", email = "oceaneon@unisinos.br"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Visualization",
    "Framework :: PyQt5",
]
keywords = [
    "paleontology",
    "microfossils",
    "tectonics",
    "gplates",
    "visualization",
    "3d",
    "paleogeography",
    "gtm-display"
]

dependencies = [
    # GUI Framework
    "PyQt5>=5.15.9,<6.0",
    "PyQt5-Qt5>=5.15.2",
    "PyQt5-sip>=12.13.0",
    "PyQtWebEngine>=5.15.6",

    # Async & HTTP
    "httpx>=0.27.0,<0.28",
    "anyio>=4.0.0",
    "qasync>=0.27.0",

    # Data Validation
    "pydantic>=2.5.0,<3.0",
    "pydantic-settings>=2.1.0",

    # Scientific Computing
    "numpy>=1.26.0,<2.0",
    "scipy>=1.12.0,<2.0",

    # Geographic
    "pyproj>=3.6.0,<4.0",

    # Logging & Monitoring
    "loguru>=0.7.0,<1.0",
    "psutil>=5.9.0,<6.0",

    # Retry & Cache
    "tenacity>=8.2.0,<9.0",
    "cachetools>=5.3.0,<6.0",

    # WebSocket
    "websockets>=12.0,<13.0",

    # Configuration
    "pyyaml>=6.0,<7.0",

    # Image Processing
    "Pillow>=10.0.0,<11.0",

    # SSL
    "certifi>=2024.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0,<9.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-benchmark>=4.0.0",
    "pytest-mock>=3.12.0",
    "pytest-qt>=4.2.0",
    "pytest-timeout>=2.2.0",
    "hypothesis>=6.92.0",
    "responses>=0.24.0",
    "freezegun>=1.2.0",

    # Type Checking
    "mypy>=1.8.0",
    "types-PyYAML",
    "types-requests",
    "types-cachetools",

    # Linting & Formatting
    "ruff>=0.1.0",
    "black>=24.0.0",
    "isort>=5.13.0",

    # Development Tools
    "pre-commit>=3.6.0",
    "ipython>=8.18.0",
    "rich>=13.7.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.7.0",
]
build = [
    "pyinstaller>=6.3.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]
sentry = [
    "sentry-sdk>=1.39.0,<2.0",
]
all = ["fossil-journey-tracker[dev,docs,build,sentry]"]

[project.scripts]
fossil-journey = "src.main:main"

[project.urls]
Homepage = "https://github.com/unisinos/gtm-display"
Documentation = "https://github.com/unisinos/gtm-display/wiki"
Repository = "https://github.com/unisinos/gtm-display"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "pyproj.*",
    "PyQt5.*",
    "qasync.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "benchmark: marks tests as benchmark tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
